# SWDTTI

./: CMakeLists.txt  Makefile  README.md
code_gen/: aniso_code_gen.ipynb  tti_code_gen.ipynb
cps330/: compile.sh  main.cpp  surfdisp.hpp
doxygen/: config.cfg
example/ac/: gen_model.py  model.txt  run.sh
example/love/: bench_cps.py  gen_model.py  model.txt  plot_kernel.py  plot_kernels.py  run.sh  test.py
example/rayleigh/: bench_cps.py  gen_model.py  model.txt  model.txt.1  model.txt.low  plot_kernels.py  run.sh
example/tti/: gen_model.py  modelhti.txt  modeltti.txt  plot_disp.py  plot_kernels.py  plot_phase_direc.py  run.sh  swd.45.txt
example/vti-bench/: gen_model.py  model.txt  plot_disp.py  plot_kernels.py  run.sh
include/: swdio.hpp  swdlayer.hpp
input/: crust.txt
plot/: plot_disp.py  plot_eigen.py  plot_kernel.py
scripts/: bench_cps.py  binary2h5.py  iso_wrapper.py  plot_disp.py
src/: CMakeLists.txt  initialize.cpp  libgll.cpp  libgrl.cpp  main.cpp  main_tti.cpp  main_vti.cpp  prepare_tti_matrices.cpp  prepare_vti_matrices.cpp  sem_tti.cpp  sem_vti.cpp  surfdisp.cpp  surfdisp.h  swdlayer.cpp  swdlayer.hpp  swdlayertti.cpp  swdlayertti.hpp  swdlayervti.cpp  swdlayervti.hpp  tti_kernels.cpp  tti_subs.f90  vti_kernels.cpp
src/cps330/: CMakeLists.txt  main.cpp
src/libswd/: CMakeLists.txt  main.cpp  utils.cpp  utils.hpp
src/multiphysics/: CMakeLists.txt  frechet.cpp  frechet.cpp.bak  initialize.cpp  main.cpp  sem.cpp  vti_acoustic.hpp
src/shared/: CMakeLists.txt  filter_swd.cpp  initialize.cpp  quadrature.hpp
src/tti/: CMakeLists.txt  main_tti.cpp  sem_tti.cpp  sem_tti.cpp.bak  swdlayertti.cpp  tti_kernels.cpp  tti_subs.f90
src/vti/: CMakeLists.txt  main_vti.cpp  sem_vti.cpp  swdlayervti.cpp  swdlayervti.hpp  vti_kernels.cpp
